# rust-ibverbs

./: .gitignore  .gitmodules  .travis.yml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  configure-ci.sh  wrapper.h
.github/workflows/: check.yml  scheduled.yml  test.yml
ci/: .terraform.lock.hcl  main.tf  make-os-image.sh
ci/ami-builder/: .dockerignore  Dockerfile  make-container.sh
ci/ami-builder/assets/root/packer/: create-ami.pkr.hcl  install-image.sh  manifest.json  provision-image.sh
ci/image-builder/: Dockerfile  make-container.sh
ci/image-builder/assets/: generate-image.sh
ci/image-definition/: Dockerfile  Dockerfile.alpine  make-container.sh
ci/image-definition/assets/: kernel.config
ci/image-definition/assets/provision/root/etc/systemd/network/: 50-virtio-devices.network
ci/image-definition/assets/provision/root/root/.ssh/: authorized_keys
examples/: loopback.rs  loopback_srq.rs  pong.rs
ibverbs/: BUILD.bazel  Cargo.toml  README.tpl
ibverbs-sys/: BUILD.bazel  Cargo.toml  build.rs  empty.c  wrapper.h
ibverbs-sys/src/: bindings.rs  lib.rs
ibverbs/examples/: chained_ops.rs  devinfo.rs  doorbell_batching.rs  efa_read.rs  efa_srd.rs  efa_write.rs  loopback.rs  rdmacm_connect.rs
ibverbs/src/: ah.rs  completion.rs  context.rs  device.rs  efa.rs  error.rs  gid.rs  lib.rs  mr.rs  pd.rs  qp.rs  rdmacm.rs  sliceindex.rs  srq.rs
ibverbs/tests/: integration.rs  loopback.rs  rdmacm.rs
scripts/: ci.sh  eswitch-configuraton.sh  make-rdma-loopback.sh  run.sh
src/: ffi.rs  lib.rs  sliceindex.rs
tests/integration/: main.rs
