"""Bazel module for rust-ibverbs - RDMA InfiniBand verbs bindings for Rust"""

module(
    name = "rust-ibverbs",
    version = "0.9.2",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_rust", version = "0.68.1")

# rust_bindgen for generating FFI bindings
bazel_dep(name = "rules_rust_bindgen", version = "0.68.1")

# Configure rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Register the default hermetic bindgen toolchain
register_toolchains("@rules_rust_bindgen//:default_bindgen_toolchain")

# Set up crates repository for dependencies (nix, serde)
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "nix",
    version = "0.29.0",
    default_features = False,
    features = ["fs", "poll"],
)
crate.spec(
    package = "serde",
    version = "1.0.100",
    features = ["derive"],
)
crate.from_specs()
use_repo(crate, "crates")

