[package]
name = "ibverbs-sys"
version = "0.1.2"
edition = "2021"

description = "Raw, FFI bindings for RDMA ibverbs through rdma-core"
readme = "../README.md"
authors = [
    "Jon Gjengset <jon@thesquareplanet.com>",
    "Jonathan Behrens <fintelia@gmail.com>"
]
build = "build.rs"
links = "ibverbs"

homepage = "https://github.com/jonhoo/rust-ibverbs"
repository = "https://github.com/jonhoo/rust-ibverbs.git"

keywords = ["rdma", "ibverbs", "networking", "ffi"]
categories = ["network-programming", "api-bindings"]

license = "MIT OR Apache-2.0"

exclude = ["vendor/rdma-core/build/"]

[build-dependencies]
bindgen = "0.69.2"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
regex = "1.6"
