[package]
name = "ibverbs"
version = "0.8.0"
edition = "2021"

description = "Bindings for RDMA ibverbs through rdma-core"
readme = "../README.md"
authors = [
    "Jon Gjengset <jon@thesquareplanet.com>",
    "Jonathan Behrens <fintelia@gmail.com>"
]

homepage = "https://github.com/jonhoo/rust-ibverbs"
repository = "https://github.com/jonhoo/rust-ibverbs.git"
documentation = "https://docs.rs/ibverbs/"

keywords = ["rdma", "ibverbs", "networking"]
categories = ["network-programming", "api-bindings"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/rust-ibverbs" }
maintenance = { status = "looking-for-maintainer" }

[dependencies]
ffi = { path = "../ibverbs-sys", package = "ibverbs-sys" }

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[features]
default = ["serde"]

[dev-dependencies]
bincode = "1.3"
