[package]
name = "ibverbs"
version = "0.8.1"
edition = "2021"

description = "Bindings for RDMA ibverbs through rdma-core"
readme = "../README.md"
authors = [
    "Jon Gjengset <jon@thesquareplanet.com>",
    "Jonathan Behrens <fintelia@gmail.com>"
]

homepage = "https://github.com/jonhoo/rust-ibverbs"
repository = "https://github.com/jonhoo/rust-ibverbs.git"

keywords = ["rdma", "ibverbs", "networking"]
categories = ["network-programming", "api-bindings"]

license = "MIT OR Apache-2.0"

[dependencies]
ffi = { path = "../ibverbs-sys", package = "ibverbs-sys", version = "0.2.0" }

[dependencies.serde]
version = "1.0.100"
optional = true
features = ["derive"]

[features]
default = ["serde"]

[dev-dependencies]
bincode = "1.3"
